--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,26 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.graphics-status {
+  width: 70px;
+  display: inline-block;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-card[color="dark"] {
+  min-height: 100px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.card-2-flex {
+  box-shadow: var(--box-shadow);
+  display: flex;
+  align-items: center;
+  //background-color: blue;
+  //color: white;
+  padding: 16px;
+  border-radius: 8px;
+  ion-icon {font-size: 30px;margin-right: 16px;}
+  .content {
+    h4 {
+      margin: initial;
+      font-size: 20px;
+      font-weight: bold;
+    }
+  }
 }
