--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -77,6 +77,8 @@
 
   /** custom var **/
   --box-shadow: rgb(0 0 0 / 12%) 0px 4px 16px;
+  --aw-color-deep: #1b1e4a;
+  --aw-color-light: #55597d;
 }
 
 @media (prefers-color-scheme: dark) {
