--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -80,30 +80,27 @@
       <ion-row>
         <ion-col size="4">
           <div class="card-2-flex">
-            <ion-icon name="map"></ion-icon>
-            <div class="content">
-              <h4>92%</h4>
-              <span>Humidity</span>
+            <div class="content date">
+              <h4>+30 <span>0</span><strong>C</strong></h4>
+              <span>Friday</span>
             </div>
           </div>
 
         </ion-col>
         <ion-col size="4">
           <div class="card-2-flex">
-            <ion-icon name="map"></ion-icon>
-            <div class="content">
-              <h4>92%</h4>
-              <span>Humidity</span>
+            <div class="content date">
+              <h4>+30 <span>0</span><strong>C</strong></h4>
+              <span>Saturday</span>
             </div>
           </div>
 
         </ion-col>
         <ion-col size="4">
           <div class="card-2-flex">
-            <ion-icon name="map"></ion-icon>
-            <div class="content">
-              <h4>92%</h4>
-              <span>Humidity</span>
+            <div class="content date">
+              <h4>+30 <span>0</span><strong>C</strong></h4>
+              <span>Sunday</span>
             </div>
           </div>
 
