--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-list lines="none">
-        <ion-item>
+        <ion-item class="heading">
           <ion-icon name="apps"></ion-icon>
           <ion-title class="ion-text-center" size="large">Weather Forecast</ion-title>
         </ion-item>
@@ -21,36 +21,63 @@
   <div id="container">
     <ion-searchbar placeholder="Search Your City"></ion-searchbar>
 
-
+    <!-- Today's weather status of Users location -->
     <ion-card>
       <ion-card-header>
-        <ion-grid>
-          <ion-row class="ion-justify-content-between">
-            <ion-col><strong>Today</strong></ion-col>
-            <ion-col class="ion-text-end"><span>Friday, 01 April</span></ion-col>
-          </ion-row>
-        </ion-grid>
+        <ion-list lines="none">
+          <ion-item>
+            <strong>Today</strong>
+            <span slot="end">Friday, 01 April</span>
+          </ion-item>
+        </ion-list>
+
       </ion-card-header>
       <ion-card-content>
+
+
         <ion-grid>
-          <ion-row class="ion-justify-content-between ion-align-items-center">
+          <ion-row class="ion-justify-content-between ion-align-items-center ion-padding-bottom">
             <ion-col>
-              +<strong>30</strong>
+              <strong class="big-font">30</strong>
             </ion-col>
             <ion-col class="ion-text-end">
               <ion-img src="./assets/icon/few-clouds.png" class="graphics-status"></ion-img>
               <!--              <ion-icon src="/assets/icon/few-clouds.png"></ion-icon>-->
+              <ion-chip>
+                <ion-label color="secondary">Mostly Cloudy</ion-label>
+              </ion-chip>
             </ion-col>
           </ion-row>
         </ion-grid>
-        <div class="ion-text-center">
-          <ion-icon name="pin"></ion-icon>
-          <span>Colombo, Bangladesh</span>
-        </div>
+
+        <ion-list>
+          <ion-item class="transparent">
+            <strong>Location</strong>
+            <label slot="end">Dhaka</label>
+          </ion-item>
+          <ion-item class="transparent">
+            <strong>Air Quality</strong>
+            <label slot="end">Fair</label>
+          </ion-item>
+          <ion-item class="transparent">
+            <strong>Wind</strong>
+            <label slot="end">S 19 km/h</label>
+          </ion-item>
+          <ion-item class="transparent">
+            <strong>Wind Gusts</strong>
+            <label slot="end">19 km/h</label>
+          </ion-item>
+        </ion-list>
+
+<!--        <div class="ion-padding-top ion-text-center">-->
+<!--          <ion-icon name="pin"></ion-icon>-->
+<!--          <span>Colombo, Bangladesh</span>-->
+<!--        </div>-->
       </ion-card-content>
 
     </ion-card>
 
+    <!-- Humidity & Air pressure -->
     <ion-grid>
       <ion-row>
         <ion-col>
@@ -67,8 +94,8 @@
           <div class="card-2-flex">
             <ion-icon name="map"></ion-icon>
             <div class="content">
-              <h4>92%</h4>
-              <span>Humidity</span>
+              <h4>92HPa</h4>
+              <span>Pressure</span>
             </div>
           </div>
 
@@ -76,6 +103,7 @@
       </ion-row>
     </ion-grid>
 
+    <!-- Upcoming weather -->
     <ion-grid>
       <ion-row>
         <ion-col size="4">
