--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -19,8 +19,13 @@ ion-searchbar {
 }
 
 .big-font {
-  font-size: 80px;
+  font-size: 50px;
   color: white;
+}
+
+.deg-position {
+  font-size: 20px;
+  padding-left: 5px;
 }
 
 .card-2-flex {
