--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -34,13 +34,14 @@ ion-searchbar {
 }
 
 .big-font {
-  font-size: 50px;
+  font-size: 60px;
   color: white;
 }
 
 .deg-position {
   font-size: 20px;
   padding-left: 5px;
+  vertical-align: top;
 }
 
 .card-2-flex {
