--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,8 +25,9 @@
       <ion-card-header>
         <ion-list lines="none">
           <ion-item>
-            <strong>Today</strong>
-            <span slot="end">{{ (currentData?.LocalObservationDateTime) | date:'EEEE, d MMMM' }}</span>
+            <strong *ngIf="currentDate">Today</strong>
+            <span *ngIf="currentData?.LocalObservationDateTime" slot="end">{{ (currentData?.LocalObservationDateTime) | date:'EEEE, d MMMM' }}</span>
+<!--            <span *ngIf="currentDate" slot="end">{{ (currentData?.LocalObservationDateTime) | date:'EEEE, d MMMM' }}</span>-->
           </ion-item>
         </ion-list>
 
@@ -58,7 +59,7 @@
         <ion-list>
           <ion-item class="transparent">
             <strong>Location</strong>
-            <label slot="end">{{ address }}</label>
+            <label *ngIf="address" slot="end">{{ address }}</label>
           </ion-item>
           <!--          <ion-item class="transparent">-->
           <!--            <strong>Air Quality</strong>-->
@@ -66,12 +67,12 @@
           <!--          </ion-item>-->
           <ion-item class="transparent">
             <strong>Wind</strong>
-            <label
+            <label *ngIf="currentData"
               slot="end"> {{ currentData?.Wind?.Speed?.Metric?.Value + ' ' + currentData?.Wind?.Speed?.Metric?.Unit }} </label>
           </ion-item>
           <ion-item class="transparent">
             <strong>Wind Gusts</strong>
-            <label
+            <label *ngIf="currentData"
               slot="end">{{ currentData?.WindGust?.Speed?.Metric?.Value + ' ' + currentData?.WindGust?.Speed?.Metric?.Unit }}</label>
           </ion-item>
         </ion-list>
